# tracy-playback

./: .gitignore  CMakeLists.txt  LICENSE  build-and-run  conanfile.txt  setup-build-and-run
src/: CMakeLists.txt
src/playback/: CMakeLists.txt
src/playback/include/: eventStream.h  playback.h  playbackThread.h  processInfo.h  threadGroupAllocator.h
src/playback/src/: eventStream.cpp  playback.cpp  playbackThread.cpp  threadGroupAllocator.cpp
src/playback_bin/: CMakeLists.txt  main.cpp
src/recorder/: CMakeLists.txt
src/recorder/include/: rawEntries.h  recorder.h  utilities.h
src/recorder/src/: rawEntries.cpp  recorder.cpp
test/: CMakeLists.txt
test/playback/: CMakeLists.txt  playback_tests.cpp
test/recorder/: CMakeLists.txt  recorder_tests.cpp
