cmake_minimum_required(VERSION 3.31)
project(tracy_recorder VERSION 1.0.0 LANGUAGES C CXX)

set(SOURCE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/rawEntries.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/recorder.cpp
)

set(HEADER_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/include/rawEntries.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/recorder.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/utilities.h
)

add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})